//Define the used version of proto:
syntax = 'proto3';
package com.sci4s.grpc;

import "SciRIO.proto";

option java_package = "com.sci4s.grpc";
option java_outer_classname = "HRGIO";

message UserInfo {
	int32  userID        = 1;
	string loginID       = 2;
	string pwd           = 3;	
	string userNM        = 4;
	string userNMEng     = 5;
	string empNO         = 6;
	string regionCD      = 7; //사용자 지역
	string regionNM      = 8; 
	string zipCD         = 9;
	string telNO   	     = 10;
	string mobile	     = 11;
	string userType      = 12; //사용자유형코드(ADM,SVC,VEN,SYS)
	int32  isActive      = 13;
	string roleID        = 14; //권한코드
	string grade         = 15; //직급/직책
	string faxNO 	     = 16;
	int32  totAdminYn    = 17; //1:대표(전체)관리자여부, 0:아님
	string addr1	     = 18;
	string addr2	     = 19;
	string email 	     = 20;
	string custID 	     = 21; //회사코드=vendorID
	string custNM   	 = 22;
	string obuID         = 23; //사업장코드=vendorID
	string obuNM         = 24;
	int32  borgUID    	 = 25; //부서ID
	string borgID        = 26; //부서코드
	string borgNM	     = 27;
	string agentID       = 28; //대행사ID
	string userActFile   = 29; //사용자권한 XML파일경로
	string dbSTS         = 30; //Y:사용, N:삭제
	string userIP        = 31; //사용자IP	
	string csKey         = 32; //로그인 인증키
	string pID           = 33; //프로그램ID
	string errCode       = 34; //에러코드
    string errMsg        = 35; //에러메시지
}

message Login {
	string loginKey = 1;	
	map<string, string> params = 2;
}

//Define the service :
service MsaHR {
    rpc getLoginUserInfo(Data) returns (UserInfo){}
    rpc loginProcess(Login) returns (Data){}
}