package com.msa.grpc.dto;

public class GrpcParams {
	
	private String channel;
	private String agentID;
	private String pID;
	private String pwd;
	private String clientID;
	private String loginID;
	private String userUID;
	private String borgUID;
	private String csKey;
	private String userIP;
	private String serverIP;
	private String data;
	private String startTime;
	private String endTime;
	private String errCode;
	private String errMsg;
	private String rpcClass;
	private String methodNM;
	private String type;
	private String clang;
	
	private String roleID;
	private String consignGB;
	
	private String menuID;
	private String bmenuID;
	private String msa;
	
	private String sqlID;
	private String procGB;
	private String dbGB;   //MDB:Maria, ODB:Oracle
	
	public String getChannel() {
		return channel;
	}
	public void setChannel(String channel) {
		this.channel = channel;
	}
	public String getPwd() {
		return pwd;
	}
	public void setPwd(String pwd) {
		this.pwd = pwd;
	}
	public String getClientID() {
		return clientID;
	}
	public void setClientID(String clientID) {
		this.clientID = clientID;
	}
	public String getLoginID() {
		return loginID;
	}
	public void setLoginID(String loginID) {
		this.loginID = loginID;
	}
	public String getRpcClass() {
		return rpcClass;
	}
	public void setRpcClass(String rpcClass) {
		this.rpcClass = rpcClass;
	}
	public String getMethodNM() {
		return methodNM;
	}
	public void setMethodNM(String methodNM) {
		this.methodNM = methodNM;
	}
	public String getType() {
		return type;
	}
	public void setType(String type) {
		this.type = type;
	}
	public String getRoleID() {
		return roleID;
	}
	public void setRoleID(String roleID) {
		this.roleID = roleID;
	}
	public String getConsignGB() {
		return consignGB;
	}
	public void setConsignGB(String consignGB) {
		this.consignGB = consignGB;
	}
	public String getMenuID() {
		return menuID;
	}
	public void setMenuID(String menuID) {
		this.menuID = menuID;
	}
	public String getBmenuID() {
		return bmenuID;
	}
	public void setBmenuID(String bmenuID) {
		this.bmenuID = bmenuID;
	}
	public String getMsa() {
		return msa;
	}
	public void setMsa(String msa) {
		this.msa = msa;
	}
	public String getClang() {
		return clang;
	}
	public void setClang(String clang) {
		this.clang = clang;
	}
	public String getpID() {
		return pID;
	}
	public void setpID(String pID) {
		this.pID = pID;
	}
	public String getAgentID() {
		return agentID;
	}
	public void setAgentID(String agentID) {
		this.agentID = agentID;
	}
	public String getCsKey() {
		return csKey;
	}
	public void setCsKey(String csKey) {
		this.csKey = csKey;
	}
	public String getUserIP() {
		return userIP;
	}
	public void setUserIP(String userIP) {
		this.userIP = userIP;
	}
	public String getServerIP() {
		return serverIP;
	}
	public void setServerIP(String serverIP) {
		this.serverIP = serverIP;
	}
	public String getUserUID() {
		return userUID;
	}
	public void setUserUID(String userUID) {
		this.userUID = userUID;
	}
	public String getBorgUID() {
		return borgUID;
	}
	public void setBorgUID(String borgUID) {
		this.borgUID = borgUID;
	}
	public String getData() {
		return data;
	}
	public void setData(String data) {
		this.data = data;
	}
	public String getStartTime() {
		return startTime;
	}
	public void setStartTime(String startTime) {
		this.startTime = startTime;
	}
	public String getEndTime() {
		return endTime;
	}
	public void setEndTime(String endTime) {
		this.endTime = endTime;
	}
	public String getErrCode() {
		return errCode;
	}
	public void setErrCode(String errCode) {
		this.errCode = errCode;
	}
	public String getErrMsg() {
		return errMsg;
	}
	public void setErrMsg(String errMsg) {
		this.errMsg = errMsg;
	}
	public String getSqlID() {
		return sqlID;
	}
	public void setSqlID(String sqlID) {
		this.sqlID = sqlID;
	}
	public String getProcGB() {
		return procGB;
	}
	public void setProcGB(String procGB) {
		this.procGB = procGB;
	}
	public String getDbGB() {
		return dbGB;
	}
	public void setDbGB(String dbGB) {
		this.dbGB = dbGB;
	}
}
